# CXRIS

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: aperatureGrid.cpp  aperatureGrid.hpp  aperatureList.cpp  aperatureList.hpp  boundPlane.cpp  boundPlane.hpp  boundingShell.cpp  boundingShell.hpp  boundingShellCollection.cpp  boundingShellCollection.hpp  camera.cpp  camera.hpp  grid.cpp  grid.hpp  imagePlate.cpp  imagePlate.hpp  pixel.cpp  pixel.hpp  ray.cpp  ray.hpp
inputs/: aperatures_input.txt  camera_input.txt  grid_input.txt  imagePlate_input.txt
src/: aperatureGrid.cpp  aperatureList.cpp  boundPlane.cpp  boundingShell.cpp  boundingShellCollection.cpp  camera.cpp  grid.cpp  imagePlate.cpp  main.cc  main.cpp  pixel.cpp  ray.cpp
